@@ -1,104 +1,0 @@
-pixmap_path "/home/erwannc/code/Nimbus/share/themes/nimbus/gtk-2.0"
-style "icon-style"
-{
-   stock["gtk-dialog-authentication"] =  {{ "dialog_authentication.png",*,*,*}}
-   stock["gtk-dialog-info"] =		 {{ "dialog_info.png",*,*,*}}
-   stock["gtk-dialog-warning"] =	 {{ "dialog_warning.png",*,*,*}}
-   stock["gtk-dialog-error"] =		 {{ "dialog_error.png",*,*,*}}
-   stock["gtk-dialog-question"] =	 {{ "dialog_question.png",*,*,*}}
-   stock["gtk-dnd"] =			 {{ "stock_dnd.png",*,*,*}}
-   stock["gtk-dnd-multiple"] =		 {{ "stock_dnd_multiple.png",*,*,*}}
-   stock["gtk-about"] =			 {{ "about.png",*,*,*}}
-   stock["gtk-add"] =			 {{ "add.png",*,*,*}}
-   stock["gtk-apply"] =			 {{ "apply.png",*,*,*}}
-   stock["gtk-bold"] =			 {{ "format-text-bold.png",*,*,*}}
-   stock["gtk-cancel"] =		 {{ "cancel.png",*,*,*}}
-   stock["gtk-cdrom"] =			 {{ "cdrom_16.png",*,*,"gtk-menu"},
-					  { "cdrom_24.png",*,*,*}}
-   stock["gtk-clear"] =			 {{ "clear.png",*,*,*}}
-   stock["gtk-close"] =			 {{ "close.png",*,*,*}}
-   stock["gtk-color-picker"] =		 {{ "colorselector.png",*,*,*}}
-   stock["gtk-convert"] =		 {{ "convert.png",*,*,*}}
-   stock["gtk-connect"] =		 {{ "connect.png",*,*,*}}
-   stock["gtk-copy"] =			 {{ "edit-copy_16.png",*,*,"gtk-menu"},
-					  { "edit-copy_24.png",*,*,*}}
-   stock["gtk-cut"] =			 {{ "edit-cut_16.png",*,*,"gtk-menu"},
-					  { "edit-cut_24.png",*,*,*}}
-   stock["gtk-delete"] =		 {{ "delete_16.png",*,*,"gtk-menu"},
-					  { "delete_24.png",*,*,*}}
-   stock["gtk-directory"] =		 {{ "directory.png",*,*,*}}
-   stock["gtk-disconnect"] =		 {{ "disconnect.png",*,*,*}}
-   stock["gtk-edit"] =			 {{ "edit.png",*,*,*}}
-   stock["gtk-execute"] =		 {{ "execute.png",*,*,*}}
-   stock["gtk-file"] =			 {{ "file.png",*,*,*}}
-   stock["gtk-find"] =			 {{ "edit-find.png",*,*,*}}
-   stock["gtk-find-and-replace"] =	 {{ "edit-find-replace.png",*,*,*}}
-   stock["gtk-floppy"] =		 {{ "floppy.png",*,*,*}}
-   stock["gtk-fullscreen"] =		 {{ "fullscreen.png",*,*,*}}
-   stock["gtk-goto-bottom"] =		 {{ "go-bottom.png",*,*,*}}
-   stock["gtk-goto-first"] =		 {{ "go-first.png",*,*,*}}
-   stock["gtk-goto-last"] =		 {{ "go-last.png",*,*,*}}
-   stock["gtk-goto-top"] =		 {{ "go-top.png",*,*,*}}
-   stock["gtk-go-back"] =		 {{ "go-previous.png",*,*,*}}
-   stock["gtk-go-down"] =		 {{ "go-down.png",*,*,*}}
-   stock["gtk-go-forward"] =		 {{ "go-next.png",*,*,*}}
-   stock["gtk-go-up"] =			 {{ "go-up.png",*,*,*}}
-   stock["gtk-harddisk"] =		 {{ "harddisk.png",*,*,*}}
-   stock["gtk-help"] =			 {{ "help.png",*,*,*}}
-   stock["gtk-home"] =			 {{ "go-home.png",*,*,*}}
-   stock["gtk-index"] =			 {{ "index.png",*,*,*}}
-   stock["gtk-indent"] =		 {{ "format-indent-more.png",*,*,*}}
-   stock["gtk-info"] =			 {{ "info.png",*,*,*}}
-   stock["gtk-unindent"] =		 {{ "format-indent-less.png",*,*,*}}
-   stock["gtk-italic"] =		 {{ "format-text-italic.png",*,*,*}}
-   stock["gtk-jump-to"] =		 {{ "go-jump.png",*,*,*}}
-   stock["gtk-justify-center"] = 	 {{ "format-justify-center.png",*,*,*}}
-   stock["gtk-justify-fill"] =		 {{ "format-justify-fill.png",*,*,*}}
-   stock["gtk-justify-left"] =		 {{ "format-justify-left.png",*,*,*}}
-   stock["gtk-justify-right"] = 	 {{ "format-justify-right.png",*,*,*}}
-   stock["gtk-leave-fullscreen"] = 	 {{ "leave_fullscreen.png",*,*,*}}
-   stock["gtk-missing-image"] = 	 {{ "broken_image.png",*,*,*}}
-   stock["gtk-media-forward"] = 	 {{ "media-ffwd.png",*,*,*}}
-   stock["gtk-media-next"] = 		 {{ "media-next.png",*,*,*}}
-   stock["gtk-media-pause"] = 		 {{ "media-pause.png",*,*,*}}
-   stock["gtk-media-play"] = 		 {{ "media-play.png",*,*,*}}
-   stock["gtk-media-previous"] = 	 {{ "media-prev.png",*,*,*}}
-   stock["gtk-media-record"] =		 {{ "media-record.png",*,*,*}}
-   stock["gtk-media-rewind"] =	         {{ "media-rewind.png",*,*,*}}
-   stock["gtk-media-stop"] = 		 {{ "media-stop.png",*,*,*}}
-   stock["gtk-network"] = 	 	 {{ "network.png",*,*,*}}
-   stock["gtk-new"] =		         {{ "document-new.png",*,*,*}}
-   stock["gtk-no"] =			 {{ "no.png",*,*,*}}
-   stock["gtk-ok"] =			 {{ "ok.png",*,*,*}}
-   stock["gtk-open"] =			 {{ "document-open.png",*,*,*}}
-   stock["gtk-paste"] = 		 {{ "edit-paste.png",*,*,*}}
-   stock["gtk-preferences"] = 		 {{ "preferences.png",*,*,*}}
-   stock["gtk-print"] = 		 {{ "document-print.png",*,*,*}}
-   stock["gtk-print-preview"] = 	 {{ "document-print-preview.png",*,*,*}}
-   stock["gtk-properties"] = 		 {{ "document-properties.png",*,*,*}}
-   stock["gtk-quit"] =			 {{ "quit.png",*,*,*}}
-   stock["gtk-redo"] =			 {{ "edit-redo.png",*,*,*}}
-   stock["gtk-refresh"] = 		 {{ "view-refresh.png",*,*,*}}
-   stock["gtk-remove"] = 		 {{ "remove.png",*,*,*}}
-   stock["gtk-revert-to-saved"] = 	 {{ "revert.png",*,*,*}}
-   stock["gtk-save"] =			 {{ "document-save.png",*,*,*}}
-   stock["gtk-save-as"] = 		 {{ "document-save-as.png",*,*,*}}
-   stock["gtk-select-color"] =		 {{ "colorselector.png",*,*,*}}
-   stock["gtk-select-font"] = 		 {{ "font.png",*,*,*}}
-   stock["gtk-sort-ascending"] = 	 {{ "sort_ascending.png",*,*,*}}
-   stock["gtk-sort-descending"] = 	 {{ "sort_descending.png",*,*,*}}
-   stock["gtk-spell-check"] = 		 {{ "spellcheck.png",*,*,*}}
-   stock["gtk-stop"] =			 {{ "stop.png",*,*,*}}
-   stock["gtk-strikethrough"] = 	 {{ "format-text-strikethrough.png",*,*,*}}
-   stock["gtk-undelete"] = 		 {{ "undelete.png",*,*,*}}
-   stock["gtk-underline"] = 		 {{ "format-text-underline.png",*,*,*}}
-   stock["gtk-undo"] =			 {{ "edit-undo.png",*,*,*}}
-   stock["gtk-yes"] =			 {{ "yes.png",*,*,*}}
-   stock["gtk-zoom-100"] = 		 {{ "zoom-original.png",*,*,*}}
-   stock["gtk-zoom-fit"] = 		 {{ "zoom-best-fit.png",*,*,*}}
-   stock["gtk-zoom-in"] = 		 {{ "zoom-in.png",*,*,*}}
-   stock["gtk-zoom-out"] = 		 {{ "zoom-out.png",*,*,*}}
-#   stock["panel-my-computer"] =		 {{ "my-computer.png", *, *, * }}
-
-}
-class "GtkWidget" style "icon-style"
